# washi

./: CHANGELOG.md  Cargo.toml  readme.md
src/: format.rs  main.rs
test-data/: README.md  function_params_do_not_shadow_module_scope_globals.input.wgsl  resolves_local_before_global_in_value_context.expected.wgsl  resolves_local_before_global_in_value_context.input.wgsl  reuses_local_names_across_functions.expected.wgsl  reuses_local_names_across_functions.input.wgsl  underscore_prefixed_idents_are_preserved.expected.wgsl  underscore_prefixed_idents_are_preserved.input.wgsl  write_map_excludes_locals_and_keeps_globals.expected.map  write_map_excludes_locals_and_keeps_globals.input.wgsl
