[package]
name = "washi"
authors = ["sagacity"]
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datatrash/washi"
publish = false

[package.metadata.dist]
dist = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
glob = "0.3.3"
itertools = "0.14.0"
shadow-rs = { version = "1.7.0", default-features = false }
unicode-ident = "1.0.24"
wgsl-parse = "0.3.2"
wgsl-types = "0.3.2"

[build-dependencies]
anyhow = "1.0.102"
shadow-rs = "1.7.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
